# UG

./: .gitignore  server.py
99-scala-problems/99-problems/: build.sbt
Algorytmy/lab-01/: z1_1.py  z1_2.py
Algorytmy/lab-02/: input.txt  output.txt  z2_4.py
Algorytmy/lab-03/: z3_4.py
Algorytmy/lab-06/: z4_2.py
Algorytmy/lab-07/: z5.py
Algorytmy/lab-08/: main.py
Algorytmy/lab-09/: less.txt  main.py  x.py
Algorytmy/lab-10/: main.py
Bazy danych I/: Muzeum - historyjka.md  Muzeum.vpp  Muzeum.vpp.bak_000f  Muzeum.vpp.bak_023d  projekt2.sql
Frontend/lab01/: index.html
Frontend/lab02/: index.html  style.css
Inteligencja obliczeniowa/: zad01.py  zad01_GPT_refactor.py  zad02.py
Inteligencja obliczeniowa/lab01/: zad01_GPT.py  zad02.py
Inteligencja obliczeniowa/lab02/: ex1.py  ex2.py  ex3.py  iris_super_duper_clean.csv
Inteligencja obliczeniowa/lab03/: ex1.py  ex2.py  ex3.py
Inteligencja obliczeniowa/lab04/: ex1.py  ex2.py  ex3.py
Inteligencja obliczeniowa/lab05/: .gitignore  ex1.py  ex2.py  ex3.ipynb  ex3.py  iris_model.keras  shell.nix
Inteligencja obliczeniowa/lab06/: .gitignore  ex1.py  ex2.py  ex3.py  ex4.py  pyproject.toml  python-packages.nix  shell.nix
Inteligencja obliczeniowa/lab07/: accounts.db  article.txt  ex1.py  ex2.py  ex3.py  posts.json  pyproject.toml  shell.nix
Inteligencja obliczeniowa/lab07/rnn-lstm-complete/: lstm01.py  lstm02.py  lstm03.py  lstm04.py  lstm05.py  weights-improvement-01-3.1155.keras  weights-improvement-02-2.9865.keras  weights-improvement-03-2.9012.keras  weights-improvement-48-1.7464.hdf5
Inteligencja obliczeniowa/lab08/: ex0.py  ex1.py  ex2.py  ex3.py  partition_ga 1.py  pyproject.toml
Inteligencja obliczeniowa/lab09/: aco-tsp 1.py  ex1.py  pso-animation 1.py  pso-sphere 1.py  pyproject.toml
Inteligencja obliczeniowa/lab10/: ex2.py  ex4-1.py  frozen.py  frozenlake-q-learn.py  lunar.py  pyproject.toml  shell.nix
Inteligencja obliczeniowa/project/: .gitignore  front.py  libstdc++.so.6  main.py  result  shell.nix  wrapper.nix
Inteligencja obliczeniowa/project2/: README.md  board.py  boards.txt  fittness.py  kuromasu.py  lstml.py  main.py  pyproject.toml  results.txt  swarms.py  utils.py
Inteligencja obliczeniowa/project2/data/: AMZN(1).csv  AMZN.csv
Security/lab01/: attack.py  main.py
Security/project/: README.md  docker-compose.yml  pyproject.toml
Security/project/import/: xd.json
Security/project/src/api/: Dockerfile  main.py  models.py  requirements.txt
Security/project/src/next/: .env.local  Dockerfile
Security/project/src/next/app/: layout.js
Security/project/src/next/app/admin/: page.js
Security/project/src/next/app/api/auth/[...nextauth]/: route.js
Security/project/src/next/app/api/auth/logout/: route.js
Security/project/src/next/app/meetings/: page.js
Security/project/src/next/app/unauthorized/: page.js
Security/project/src/next/components/: addMeeting.js  authStatus.js  deleteMeeting.js  nav.js
Security/project/src/next/utils/: encryption.js
WDP/lesson1/: ex3.py  ex4.py  ex6.py  ex8.py  ex9.py
WDP/lesson2/: ex2_3.py  ex2_4.py  ex3.py  ex4.py  ex7.py  ex8.py
WDP/lesson3/: 2ex11.py  2ex5.py  2ex9.py  ex10.py  ex2.py  ex4.py  ex7.py  ex9.py
WDP/lesson4/: fib.py
WDP/lesson5/: ex11.py  ex15.py  ex2.py  ex3.py  ex4.py  ex7.py  ex8.py
Warsztat programisty/: Stepik_2  kolos_together  stepik_13.2_together
Warsztat programisty/LaTeX/: zad1.tex
Wstęp do programowania/: help.py
Wstęp do programowania/lesson1/: ex1.py  ex10.py  ex11.py  ex3.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py
Wstęp do programowania/lesson10/: ex2.py  ex3.py  ex4.py  ex5.py  ex7.py  ex8.py  ex9.py  snake.py  test.txt  test2.txt  test3.txt
Wstęp do programowania/lesson2/: ex1.py  ex10.py  ex2.py  ex2_1.py  ex2_2.py  ex2_3.py  ex2_4.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py
Wstęp do programowania/lesson3/: 2ex10.py  2ex11.py  2ex12.py  2ex13.py  2ex2.py  2ex5.py  2ex6.py  2ex7.py  2ex8.py  2ex9.py  ex1.py  ex10.py  ex2.py  ex3.py  (+6 more)
crypto/: cezar.py  crypto.txt  decrypt.txt  extra.txt  lab01.py  plain.txt
deklaratywne/: lab01.rkt  lab03.rkt
golang/: go.mod  main.go
(+157 files in other folders)
