[tool.poetry]
name = "lab06"
version = "0.1.0"
description = ""
authors = ["memetelve <memetelve1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
apyori = "^1.1.2"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
