[tool.poetry]
name = "lab07"
version = "0.1.0"
description = ""
authors = ["memetelve <memetelve1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keras = "^3.3.3"
tensorflow = "^2.16.1"
optree = "^0.11.0"
rich = "^13.7.1"
ml-dtypes = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
