[tool.poetry]
name = "lab07"
version = "0.1.0"
description = ""
authors = ["Memetelve <memetelve1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
nltk = "^3.8.1"
matplotlib = "^3.9.0"
pyqt6 = "^6.7.0"
wordcloud = "^1.9.3"
text2emotion = "^0.0.5"
twscrape = "^0.12"
pandas = "^2.2.2"
keras = "^2.15.0"
tensorflow = { extras = ["and-cuda"], version = "2.15.1" }
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
