[tool.poetry]
name = "lab08"
version = "0.1.0"
description = ""
authors = ["memetelve <memetelve1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygad = "^3.3.1"
numpy = "^1.26.4"
thinker = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
