[tool.poetry]
name = "lab09"
version = "0.1.0"
description = ""
authors = ["memetelve <memetelve1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyswarms = "^1.3.0"
myplotlib = "^1.3.0"
numpy = "^1.26.4"
aco = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
