[tool.poetry]
name = "lab10"
version = "0.1.0"
description = ""
authors = ["memetelve <memetelve1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gym = "^0.26.2"
simpful = "^2.12.0"
gymnasium = "^0.29.1"
setuptools = "^70.0.0"
pygame = "^2.5.2"
matplotlib = "^3.9.0"
pyqt6 = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
