[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["Memetelve <memetelve1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
pyqt6 = "^6.7.0"
statsmodels = "^0.14.2"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
keras = "^3.3.3"
twscrape = "^0.12"
twitter-api-client = "^0.10.22"
pygad = "^3.3.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
